--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </address>
         </div>
-        <div class="footer-pages__right">
+        <div class="footer-pages__center">
           <h3 class="footer-pages__title">приєднуйтесь</h3>
           <ul class="footer-social__list">
             <li class="footer-social__item">
@@ -425,6 +425,22 @@
               </svg>
             </li>
           </ul>
+        </div>
+        <div class="footer-pages__right">
+          <h3 class="footer-pages__title">Підпишіться на розсилку</h3>
+          <form class="footer__form">
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="footer__input"
+            />
+            <button class="footer__btn" type="submit">
+              Підписатися
+              <svg class="footer-form__icon">
+                <use href="./images/svg/send.svg"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
