--- a/portfolio.html
+++ b/portfolio.html
@@ -66,103 +66,166 @@
       <div class="container">
         <ul class="main-list">
           <li class="main-list-item">
-            <article class="info">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Технокряк.jpg"
                 alt="Технокряк"
               />
-              <h4 class="info-title">Технокряк</h4>
-              <p class="info-text">Веб-сайт</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Технокряк</h4>
+            <p class="list-text">Веб-сайт</p>
           </li>
           <li class="main-list-item">
-            <article class="info">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/NewOrlea.jpg"
-                alt="NewOrlean"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
-              <p class="info-text">Дизайн</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Постер New Orlean vs Golden Star</h4>
+            <p class="list-text">Дизайн</p>
           </li>
-          <li>
-            <article class="info">
+          <li class="main-list-item">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Seafood.jpg"
-                alt="Seafood"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Ресторан Seafood</h4>
-              <p class="info-text">Додаток</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Ресторан Seafood</h4>
+            <p class="list-text">Додаток</p>
           </li>
           <li class="main-list-item">
-            <article class="info">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Prime.jpg"
-                alt="Prime"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Проєкт Prime</h4>
-              <p class="info-text">Маркетинг</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Проєкт Prime</h4>
+            <p class="list-text">Маркетинг</p>
           </li>
-          <li>
-            <article class="info">
+          <li class="main-list-item">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Boxes.jpg"
-                alt="Boxes"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Проєкт Boxes</h4>
-              <p class="info-text">Додаток</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Проєкт Boxes</h4>
+            <p class="list-text">Додаток</p>
           </li>
           <li class="main-list-item">
-            <article class="info">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Inspiration.jpg"
-                alt="Inspiration"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Inspiration has no Borders</h4>
-              <p class="info-text">Веб-сайт</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Inspiration has no Borders</h4>
+            <p class="list-text">Веб-сайт</p>
           </li>
-          <li>
-            <article class="info">
+          <li class="main-list-item">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Limited.jpg"
-                alt="Limited"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Видання Limited Edition</h4>
-              <p class="info-text">Дизайн</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Видання Limited Edition</h4>
+            <p class="list-text">Дизайн</p>
           </li>
           <li class="main-list-item">
-            <article class="info">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Lab.jpg"
-                alt="Lab"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Проєкт LAB</h4>
-              <p class="info-text">Маркетинг</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Проєкт LAB</h4>
+            <p class="list-text">Маркетинг</p>
           </li>
           <li class="main-list-item">
-            <article class="info">
+            <div class="thumb">
               <img
-                class="info-img"
+                class="list-img"
                 src="./images/portfolio/Growing.jpg"
-                alt="Growing"
+                alt="Технокряк"
               />
-              <h4 class="info-title">Growing Business</h4>
-              <p class="info-text">Додаток</p>
-            </article>
+              <div class="overlay-box">
+                <p class="overlay-box__text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+            </div>
+            <h4 class="list-title">Growing Business</h4>
+            <p class="list-text">Додаток</p>
           </li>
         </ul>
       </div>
@@ -170,18 +233,18 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-pages__left">
-        <a class="footer-logo" href="#"
-          >Web<span class="footer-span">Studio</span></a
-        >
-        <address class="address">
-          <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-          <a class="footer-mail" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="footer-logo" href="#"
+            >Web<span class="footer-span">Studio</span></a
           >
-          <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
-      </div>
-        <div class="footer-pages__right">
+          <address class="address">
+            <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+            <a class="footer-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          </address>
+        </div>
+        <div class="footer-pages__center">
           <h3 class="footer-pages__title">приєднуйтесь</h3>
           <ul class="footer-social__list">
             <li class="footer-social__item">
@@ -205,6 +268,18 @@
               </svg>
             </li>
           </ul>
+        </div>
+        <div class="footer-pages__right">
+          <h3 class="footer-pages__title">Підпишіться на розсилку</h3>
+          <form class="footer__form">
+            <input type="email" placeholder="E-mail" class="footer__input" />
+            <button class="footer__btn" type="submit">
+              Підписатися
+              <svg class="footer-form__icon">
+                <use href="./images/svg/send.svg"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
