--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <title>Portfolio</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +18,7 @@
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header" data-aos="zoom-in-up">
       <div class="container">
         <a class="header-logo" href="./index.html"
           >Web<span class="header-span">Studio</span></a
@@ -55,7 +56,7 @@
         </div>
       </div>
     </header>
-    <main class="main">
+    <main class="main" data-aos="zoom-in-up">
       <div class="container">
         <button class="main-btn" type="button">Усі</button>
         <button class="main-btn" type="button">Веб-сайти</button>
@@ -230,7 +231,7 @@
         </ul>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" data-aos="zoom-in-up">
       <div class="container">
         <div class="footer-pages__left">
           <a class="footer-logo" href="#"
@@ -283,5 +284,9 @@
         </div>
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
