--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
   <body>
     <header class="header" data-aos="zoom-in-up">
       <div class="container">
-        <a class="header-logo" href="./index.html"
-          >Web<span class="header-span">Studio</span></a
+        <a class="header__logo" href="./index.html"
+          >Web<span class="header__span">Studio</span></a
         >
         <nav class="navigation">
           <ul class="nav-list">
-            <li class="nav-list-item">
-              <a class="nav-list-link" href="./index.html">Студія</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./index.html">Студія</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link" href="./portfolio.html">Портфоліо</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link" href="#">Контакти</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
         <div class="contact-list">
           <div class="contact-email">
-            <a class="contact-list-link" href="mailto:info@devstudio.com">
-              <svg class="contacts-email__icon" width="16px" height="12px">
+            <a class="contact-social__link" href="mailto:info@devstudio.com">
+              <svg class="contact-email__icon" width="16px" height="12px">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </div>
           <div class="contact-tel">
-            <a class="contact-list-link" href="tel:+380961111111">
-              <svg class="contacts-tel__icon" width="10" height="16">
+            <a class="contact-social__link" href="tel:+380961111111">
+              <svg class="contact-tel__icon" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -59,11 +59,11 @@
     <main class="main">
       <section class="hero" data-aos="zoom-in-up">
         <div class="container">
-          <h1 class="hero-title">
+          <h1 class="hero__title">
             Ефективні рішення для <br />
             вашого бізнесу
           </h1>
-          <button class="hero-btn button" type="button" data-open-modal>
+          <button class="hero__btn button" type="button" data-open-modal>
             Замовити послугу
           </button>
           <div class="backdrop is-hidden" data-modal>
@@ -137,29 +137,29 @@
       <section class="features" data-aos="zoom-in-up">
         <div class="container">
           <ul class="features-list">
-            <li class="features-list-item">
-              <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="features-text">
+            <li class="features-list__item">
+              <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="features-list-item">
-              <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="features-text">
+            <li class="features-list__item">
+              <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="features-list-item">
-              <h3 class="features-title">ПЛАНУВАННЯ</h3>
-              <p class="features-text">
+            <li class="features-list__item">
+              <h3 class="features__title">ПЛАНУВАННЯ</h3>
+              <p class="features__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="features-list-item">
-              <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="features-text">
+            <li class="features-list__item">
+              <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -169,11 +169,11 @@
       </section>
       <section class="work" data-aos="zoom-in-up">
         <div class="container">
-          <h2 class="work-title">Чим ми займаємося</h2>
+          <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work-list">
-            <li class="work-list-item">
+            <li class="work-list__item">
               <img
-                class="work-img"
+                class="work__img"
                 src="./images/work/coding.jpg"
                 alt="coding"
                 width="370"
@@ -182,9 +182,9 @@
                 <p>Десктопні додатки</p>
               </div>
             </li>
-            <li class="work-list-item">
+            <li class="work-list__item">
               <img
-                class="features-img"
+                class="work__img"
                 src="./images/work/working.jpg"
                 alt="working"
                 width="370"
@@ -193,9 +193,9 @@
                 <p>Мобільні додатки</p>
               </div>
             </li>
-            <li class="work-list-item">
+            <li class="work-list__item">
               <img
-                class="work-img"
+                class="work__img"
                 src="./images/work/designing.jpg"
                 alt="designing"
                 width="370"
@@ -209,18 +209,18 @@
       </section>
       <section class="team" data-aos="zoom-in-up">
         <div class="container">
-          <h2 class="team-title">Наша команда</h2>
+          <h2 class="team__title">Наша команда</h2>
           <ul class="team-list">
-            <li class="team-list-item">
-              <article class="team-info">
+            <li class="team-list__item">
+              <article class="team__info">
                 <img
-                  class="team-img"
+                  class="team__img"
                   src="./images/team/Ігор.jpg"
                   alt="Ігор"
                   width="270"
                 />
-                <h3 class="team-name">Ігор Дем'яненко</h3>
-                <p class="team-prof">Product Designer</p>
+                <h3 class="team__name">Ігор Дем'яненко</h3>
+                <p class="team__prof">Product Designer</p>
                 <ul class="team-social">
                   <li class="team-social__item">
                     <svg class="team-social__icon">
@@ -245,16 +245,16 @@
                 </ul>
               </article>
             </li>
-            <li class="team-list-item">
-              <article class="team-info">
+            <li class="team-list__item">
+              <article class="team__info">
                 <img
-                  class="team-img"
+                  class="team__img"
                   src="./images/team/Ольга.jpg"
                   alt="Ольга"
                   width="270"
                 />
-                <h3 class="team-name">Ольга Рєпіна</h3>
-                <p class="team-prof">Frontend Developer</p>
+                <h3 class="team__name">Ольга Рєпіна</h3>
+                <p class="team__prof">Frontend Developer</p>
                 <ul class="team-social">
                   <li class="team-social__item">
                     <svg class="team-social__icon">
@@ -279,16 +279,16 @@
                 </ul>
               </article>
             </li>
-            <li class="team-list-item">
-              <article class="team-info">
+            <li class="team-list__item">
+              <article class="team__info">
                 <img
-                  class="team-img"
+                  class="team__img"
                   src="./images/team/Микола.jpg"
                   alt="Микола"
                   width="270"
                 />
-                <h3 class="team-name">Микола Тарасов</h3>
-                <p class="team-prof">Marketing</p>
+                <h3 class="team__name">Микола Тарасов</h3>
+                <p class="team__prof">Marketing</p>
                 <ul class="team-social">
                   <li class="team-social__item">
                     <svg class="team-social__icon">
@@ -313,16 +313,16 @@
                 </ul>
               </article>
             </li>
-            <li class="team-list-item">
-              <article class="team-info">
+            <li class="team-list__item">
+              <article class="team__info">
                 <img
-                  class="team-img"
+                  class="team__img"
                   src="./images/team/Михайло.jpg"
                   alt="Михайло"
                   width="270"
                 />
-                <h3 class="team-name">Михайло Єрмаков</h3>
-                <p class="team-prof">UI Designer</p>
+                <h3 class="team__name">Михайло Єрмаков</h3>
+                <p class="team__prof">UI Designer</p>
                 <ul class="team-social">
                   <li class="team-social__item">
                     <svg class="team-social__icon">
@@ -353,7 +353,7 @@
       <section class="brands" data-aos="zoom-in-up">
         <div class="container">
           <h2 class="brands__title">Постійні клієнти</h2>
-          <ul class="brands__list">
+          <ul class="brands-list">
             <li class="brands-list__item">
               <svg class="brands__icon">
                 <use href="./images/symbol-defs.svg#icon-yaco"></use>
@@ -391,15 +391,15 @@
     <footer class="footer" data-aos="zoom-in-up">
       <div class="container">
         <div class="footer-pages__left">
-          <a class="footer-logo" href="#"
-            >Web<span class="footer-span">Studio</span></a
+          <a class="footer__logo" href="#"
+            >Web<span class="footer__span">Studio</span></a
           >
           <address class="address">
-            <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-            <a class="footer-mail" href="mailto:info@devstudio.com"
+            <p class="footer__adress">м. Київ, пр-т Лесі Українки, 26</p>
+            <a class="footer__mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
-            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer__tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </address>
         </div>
         <div class="footer-pages__center">
